cut paths
